--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <header>
         <div class="interface">
             <div>
-                <a href="#" class="nome">João Simonis</a>
+                <a href="#topo-do-site" class="nome">João Simonis</a>
             </div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Sobre mim</a></li>
-                    <li><a href="#">Habilidades</a></li>
-                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#inicio" target="_self">Início</a></li>
+                    <li><a href="#sobremim" target="_self">Sobre mim</a></li>
+                    <li><a href="#habilidades" target="_self">Habilidades</a></li>
+                    <li><a href="#projetos" target="_self">Projetos</a></li>
                 </ul>
             </nav><!--navbar-->
 
             <div class="div-contato">
-                <a href="#">
+                <a href="#formulario">
                     <button>Contato</button>
                 </a>
             </div><!--div-contato-->
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <section class="topo-do-site">       
+        <section id="inicio" class="topo-do-site">       
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
@@ -45,7 +45,7 @@
             </div><!--interface-->
         </section><!--topo-do-site-->
 
-        <section class="sobre">
+        <section id="sobremim" class="sobre">
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
@@ -67,7 +67,7 @@
             </div><!--interface-->
         </section><!--sobre-->
 
-        <section class="habilidades">
+        <section id="habilidades" class="habilidades">
             <div class="interface">
                 <h2 class="titulo">MINHAS <span>HABILIDADES</span></h2>
                 <div class="flex">
@@ -105,7 +105,7 @@
             </div><!--interface-->
         </section><!--habilidades-->
 
-        <section class="projetos">
+        <section id="projetos" class="projetos">
             <div class="interface">
                 <h2 class="titulo">MEUS <span>PROJETOS</span></h2>
                 <div class="flex">
@@ -124,7 +124,7 @@
             </div><!--interface-->
         </section><!--projetos-->
 
-        <section class="formulario">
+        <section id="formulario" class="formulario">
             <div class="interface">
                 <h2 class="titulo">FALE <span>COMIGO</span></h2>
                 <form action="">
@@ -161,7 +161,7 @@
 
                 <div class="flex">
                     <div class="nome-footer">
-                        <a href="#" class="nome">João Simonis</a>
+                        <a href="#inicio" class="nome">João Simonis</a>
                     </div><!--nome-footer-->
 
                     <div class="logo-icones">
