--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
                         <p>Com 23 anos de idade e formação em Educação Física Bacharelado, minha jornada profissional tomou um novo rumo em julho de 2023, quando descobri minha paixão pela programação. Decidi então embarcar em uma transformação de carreira, dedicando-me aos estudos de programação.</p>
                         <p>Por ser uma área muito ampla, no começo foi um pouco difícil para entender por qual caminho eu deveria seguir. Hoje, o foco dos meus estudos está no desenvolvimento web e tenho aprendido muito através de cursos pela internet. Também faço faculdade de Análise e Desenvolvimento de Sistemas pela UNINTER, com previsão de conclusão em 2026/2.</p>
 
-                        <div class="logo-icones">
-                            <a href="https://www.linkedin.com/in/joaosimonis/" target="_blank" rel="next"><button><i class="bi bi-linkedin"></i></button></a>
-                            <a href="https://github.com/joaosimonis" target="_blank" rel="next"><button><i class="bi bi-github"></i></button></a>
-                            <a href="https://www.instagram.com/joaosimonis2000/" target="_blank" rel="next"><button><i class="bi bi-instagram"></i></button></a>
+                        <div class="curriculo">
+                            <img src="imgs/" alt="">
                         </div><!--logo-icones-->
                     </div> <!--txt-sobre-->
                 </div><!--flex-->
