--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <p>Por ser uma área muito ampla, no começo foi um pouco difícil para entender por qual caminho eu deveria seguir. Hoje, o foco dos meus estudos está no desenvolvimento web e tenho aprendido muito através de cursos pela internet. Também faço faculdade de Análise e Desenvolvimento de Sistemas pela UNINTER, com previsão de conclusão em 2026/2.</p>
 
                         <div class="curriculo">
-                            <img src="imgs/" alt="">
+                            <a href="pdf/curriculo-joao_simonis.pdf"><button><i class="bi bi-file-earmark-person"></i>   João Simonis CV</button></a>
                         </div><!--logo-icones-->
                     </div> <!--txt-sobre-->
                 </div><!--flex-->
